--- a/css/styles.css
+++ b/css/styles.css
@@ -47,10 +47,10 @@ address {
     }
 
 .container {
-    width: 1158px;
+    max-width: 320px;
     margin: 0 auto;
-    padding-left: 15px; 
-    padding-right: 15px;
+    padding-left: 16px; 
+    padding-right: 16px;
 }
 
 .section {
@@ -225,16 +225,18 @@ background-color: #404BBF;
 /**===================FEATURES======================*/
 
 .features {
-    padding-bottom: 120px; 
-    padding-top: 120px;
+    padding-bottom: 96px; 
+    padding-top: 96px;
 }
 
 .features-list {
     display: flex;
-    gap: 24px;
+    flex-wrap: wrap;
+    gap: 72px;
 }
 .features-item {
-    width: calc((100% - 3 * 24px) / 4);
+    /* width: calc((100% - 3 * 24px) / 4); */
+    width: 100%;
 }
 
 .features-item-icon {
@@ -243,6 +245,7 @@ background-color: #404BBF;
 
 .features-item-icon-back {
     display: flex;
+    display: none;
     justify-content: center; 
     align-items: center;
     width: 264px;
@@ -256,16 +259,17 @@ background-color: #404BBF;
 
 .features-subtitles {
 color: #2E2F42;
-font-size: 20px;
-font-weight: 500;
-line-height: 1.2;
+font-size: 36px;
+font-weight: 700;
+line-height: 1.1;
 letter-spacing: 0.02em;
-text-align: left;
+text-align: center;
 margin-bottom: 8px;
 }
 
 .features-item-text {
 font-size: 16px;
+font-weight: 500;
 line-height: 1.5;
 letter-spacing: 0.02em;
 text-align: left;
@@ -801,4 +805,35 @@ position: relative;
     background-color: #404bbf;
     border: none;
     fill: #F4F4FD;
+}
+
+@media screen and (min-width: 320px) {
+    
+}
+
+@media screen and (min-width: 768px) {
+    .container {
+        max-width: 768px;
+    }
+
+    .features-list {
+        gap: 72px 24px;
+    }
+
+    .features-item {
+        width: calc((100% - 24px) / 2);
+    }
+}
+
+@media screen and (min-width: 1440px) {
+    .container {
+        max-width: 1440px;
+        padding-left: 156px; 
+        padding-right: 156px;
+    }
+
+    .features {
+        padding-bottom: 120px; 
+        padding-top: 120px;
+    }
 }
