--- a/css/styles.css
+++ b/css/styles.css
@@ -48,7 +48,8 @@ address {
 
 .container {
     max-width: 320px;
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
     padding-left: 16px; 
     padding-right: 16px;
 }
@@ -351,30 +352,30 @@ text-align: center;
 /**===================OUT_PORTFOLIO======================*/
 
 .portfolio {
-    padding-bottom: 120px; 
-padding-top: 120px;
+    padding-bottom: 96px; 
+    padding-top: 96px;
 }
 
 .portfolio-title {
     text-transform: capitalize;
     color: #2E2F42;
-font-size: 36px;
-font-weight: 700;
-line-height: 1.11;
-letter-spacing: 0.02em;
-text-align: center;
-margin-bottom: 72px;
-white-space: nowrap;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-align: center;
+    margin-bottom: 72px;
+    white-space: nowrap;
 }
 
 .portfolio-list { 
     display: flex;
     flex-wrap: wrap;
-    gap: 48px 24px;
+    gap: 48px;
 }
 
 .portfolio-item {
-    width: calc( 100% - 48) / 3;
+    width: 100%;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -809,10 +810,18 @@ position: relative;
     .features-item-icon-back {
         display: none;
     }
+
+    .portfolio-item {
+        width: calc((100% - 24px) / 2);
+    }
+
+    .portfolio-list {
+        gap: 72px 24px;
+    }
 }
 
 @media screen and (min-width: 1440px) {
-    
+
     .container {
         max-width: 1440px;
         padding-left: 156px; 
@@ -854,5 +863,19 @@ position: relative;
         border: 1px solid #8E8F99;
         background-color: #F4F4FD;
         margin-bottom: 8px;
+    }
+
+    .portfolio {
+        padding-bottom: 120px; 
+        padding-top: 120px;
+        
+    }
+
+    .portfolio-item {
+        width: calc((100% - 48px) / 3);
+    }
+
+    .portfolio-list {
+        gap: 48px 24px;
     }
 }
