--- a/css/styles.css
+++ b/css/styles.css
@@ -26,6 +26,8 @@ button {
 
 img {
     display: block; 
+    max-width: 100%;
+    height: auto;
     width: 100%;
 }
 
@@ -260,8 +262,8 @@ text-align: left;
 
 .team {
 background-color: #F4F4FD;
-padding-bottom: 120px; 
-padding-top: 120px;
+padding-bottom: 96px; 
+padding-top: 96px;
 }
 
 .team-title {
@@ -278,12 +280,12 @@ white-space: nowrap;
 
 .team-list { 
     display: flex;
-    gap: 24px; 
+    flex-wrap: wrap;
+    gap: 72px;
 }
 
 .team-item {
     background-color: #FFFFFF;
-    width: calc((100% - 3 * 24px) / 4);
 padding: 0px, 0px, 32px, 0px;
 border-radius: 0px 0px 4px 4px;
 gap: 32px;
@@ -799,6 +801,7 @@ position: relative;
         max-width: 768px;
     }
 
+
     .features-list {
         gap: 72px 24px;
     }
@@ -810,6 +813,20 @@ position: relative;
     .features-item-icon-back {
         display: none;
     }
+
+
+    .team > .container {
+        max-width: 584px;
+    }
+
+    .team-list { 
+        gap: 64px 24px;
+    }
+
+    .team-item {
+        width: calc((100% - 24px) / 2);
+    }
+
 
     .portfolio-item {
         width: calc((100% - 24px) / 2);
@@ -827,6 +844,7 @@ position: relative;
         padding-left: 156px; 
         padding-right: 156px;
     }
+
 
     .features {
         padding-bottom: 120px; 
@@ -863,6 +881,20 @@ position: relative;
         border: 1px solid #8E8F99;
         background-color: #F4F4FD;
         margin-bottom: 8px;
+    }
+
+
+    .team {
+        padding-bottom: 120px; 
+        padding-top: 120px;
+    }   
+
+    .team-item {
+        width: calc((100% - 3 * 24px) / 4);
+    }
+          
+    .team-list { 
+        gap: 24px;
     }
 
     .portfolio {
