--- a/css/styles.css
+++ b/css/styles.css
@@ -171,14 +171,28 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
         rgba(46, 47, 66, 0.7), 
         rgba(46, 47, 66, 0.7)
         ), 
-        url(../images/people-office1_opt.jpg);
+        url(../images/people-office-mob.jpg);
     background-repeat: no-repeat;
     background-position: center;
-    padding-bottom: 188px; 
-    padding-top: 188px;
+    /* padding-bottom: 188px; 
+    padding-top: 188px; */
+    padding-bottom: 72px; 
+    padding-top: 72px;
     margin: 0 auto;
     max-width: 1440px;
     background-size: cover;
+}
+
+@media (min-device-pixel-ratio: 2),
+(min-resolution: 192dpi),
+(min-resolution: 2dppx) {
+    .opening {
+        background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7), 
+        rgba(46, 47, 66, 0.7)
+        ), 
+        url(../images/people-office-mob-2x.jpg);
+    }
 }
 
 .opening-title-btn {
@@ -187,15 +201,14 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 .opening-title {
 color: #FFFFFF;
-font-size: 56px;
+font-size: 36px;
 font-weight: 700;
-line-height: 1.07;
+line-height: 1.11;
 letter-spacing: 0.02em;
 text-align: center;
-max-width: 496px;
 margin: 0 auto;
-margin-bottom: 48px;
-
+margin-bottom: 72px;
+max-width: 169px;
 }
 
 .opening-btn {
@@ -801,6 +814,36 @@ position: relative;
         max-width: 768px;
     }
 
+.opening {
+    background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7), 
+        rgba(46, 47, 66, 0.7)
+        ), 
+        url(../images/people-office-tab.jpg);
+}
+
+@media (min-device-pixel-ratio: 2),
+(min-resolution: 192dpi),
+(min-resolution: 2dppx) {
+    .opening {
+        background-image: linear-gradient(
+        rgba(46, 47, 66, 0.7), 
+        rgba(46, 47, 66, 0.7)
+        ), 
+        url(../images/people-office-tab-2x.jpg);
+    }
+}
+
+    .opening-title {
+        font-size: 56px;
+        line-height: 1.07;
+        margin-bottom: 36px;
+        max-width: 496px;
+        }
+
+    .team > .container {
+        max-width: 584px;
+    }
 
     .features-list {
         gap: 72px 24px;
@@ -815,9 +858,6 @@ position: relative;
     }
 
 
-    .team > .container {
-        max-width: 584px;
-    }
 
     .team-list { 
         gap: 64px 24px;
@@ -845,6 +885,36 @@ position: relative;
         padding-right: 156px;
     }
 
+    .opening {
+        background-image: linear-gradient(
+            rgba(46, 47, 66, 0.7), 
+            rgba(46, 47, 66, 0.7)
+            ), 
+            url(../images/people-office.jpg);
+    }
+
+    @media (min-device-pixel-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx) {
+        .opening {
+            background-image: linear-gradient(
+            rgba(46, 47, 66, 0.7), 
+            rgba(46, 47, 66, 0.7)
+            ), 
+            url(../images/people-office-2x.jpg);
+        }
+    }
+
+    .opening-title {
+        font-size: 56px;
+        line-height: 1.07;
+        max-width: 496px;
+        margin-bottom: 48px;
+        }
+
+    .team > .container {
+        max-width: 1440px;
+    }
 
     .features {
         padding-bottom: 120px; 
