--- a/css/styles.css
+++ b/css/styles.css
@@ -161,6 +161,54 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     color: #404BBF;
     }
 
+.menu-open-btn {
+    border: none;
+    background-color: transparent;
+    width: 24px;
+    height: 24px;
+    padding: 0;
+    margin-left: auto;
+}
+
+.mob-menu {
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background: #FFF;
+    padding: 24px 24px 40px 16px;
+}
+
+.mob-close-btn-menu {
+    display: block;
+    margin-left: auto;
+    margin-bottom: 24px;
+}
+.mob-close-btn-icon {
+}
+.mob-menu-list {
+}
+.mob-menu-item {
+}
+.mob-menu-link {
+color: #2E2F42;
+font-size: 36px;
+font-weight: 700;
+line-height: 1.11; 
+letter-spacing: 0.02em;
+}
+.mob-soc {
+}
+.mob-soc-list {
+}
+.mob-soc-item {
+}
+.mob-soc-link {
+}
+
+
 /**===============================================*/
 
 /**===================OPENING======================*/
