--- a/css/styles.css
+++ b/css/styles.css
@@ -186,12 +186,18 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     margin-left: auto;
     margin-bottom: 24px;
 }
+
 .mob-close-btn-icon {
 }
+
 .mob-menu-list {
+    margin-bottom: 250px;
+
 }
-.mob-menu-item {
+.mob-menu-item:not(:last-child) {
+ margin-bottom: 40px;   
 }
+
 .mob-menu-link {
 color: #2E2F42;
 font-size: 36px;
@@ -199,6 +205,7 @@ font-weight: 700;
 line-height: 1.11; 
 letter-spacing: 0.02em;
 }
+
 .mob-soc {
 }
 .mob-soc-list {
@@ -206,6 +213,27 @@ letter-spacing: 0.02em;
 .mob-soc-item {
 }
 .mob-soc-link {
+}
+
+.mob-social-list {
+    display: flex;
+    justify-content: space-between;
+        
+}
+
+.mob-social-link {
+    width: 40px;
+    height: 40px;
+    background-color: #4D5AE5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mob-item-icon{
+    fill: #F4F4FD;
 }
 
 
