--- a/css/styles.css
+++ b/css/styles.css
@@ -175,8 +175,8 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     z-index: 1;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     background: #FFF;
     padding: 24px 24px 40px 16px;
 }
