--- a/css/styles.css
+++ b/css/styles.css
@@ -185,17 +185,35 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     display: block;
     margin-left: auto;
     margin-bottom: 24px;
+    border: none;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #2E2F42;
+    background: #FFF;
+    border: 1px solid rgba(46, 47, 66, 0.10);
 }
 
 .mob-close-btn-icon {
 }
 
 .mob-menu-list {
-    margin-bottom: 250px;
+    
 
 }
 .mob-menu-item:not(:last-child) {
  margin-bottom: 40px;   
+}
+
+.mob-info {
+display: flex;
+flex-direction: column;
+gap: 168px;
+margin-bottom: 48px;
 }
 
 .mob-menu-link {
@@ -204,15 +222,35 @@ font-size: 36px;
 font-weight: 700;
 line-height: 1.11; 
 letter-spacing: 0.02em;
+transition: color, 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mob-menu-link:hover,
+.mob-menu-link:focus {
+color: #404bbf;
 }
 
 .mob-soc {
 }
 .mob-soc-list {
+    
 }
-.mob-soc-item {
+.mob-soc-item:not(:last-child) {
+    margin-bottom: 24px;
+    
 }
 .mob-soc-link {
+    color:#434455;
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.20;
+    letter-spacing: 0.02em;
+    transition: color, 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mob-soc-link:hover,
+.mob-soc-link:focus {
+    color: #404bbf;
 }
 
 .mob-social-list {
