--- a/css/styles.css
+++ b/css/styles.css
@@ -179,6 +179,9 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     height: 100%;
     background: #FFF;
     padding: 24px 24px 40px 16px;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: auto;
 }
 
 .mob-close-btn-menu {
@@ -917,34 +920,103 @@ position: relative;
 
 @media screen and (min-width: 320px) {
 
-    .features-item-icon-back {
-        display: none;
-    }
+.features-item-icon-back {
+    display: none;
+}
 }
 
 @media screen and (min-width: 768px) {
 
-    .container {
-        max-width: 768px;
-    }
+.container {
+     max-width: 768px;
+}
+
+.header {
+    padding-top: 16px;
+    padding-bottom: 16px;
+}
+
+.header-menu {
+    display: flex;
+    gap: 40px;
+    
+}
+
+.header-menu-link {
+    color: #2E2F42;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    text-align: left;
+    position: relative;
+    padding-top: 24px;
+    padding-bottom: 24px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header-menu-link:hover,
+.header-menu-link:focus {
+    color: #404BBF;
+}
+
+.header-menu-link:hover::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    width: 100%;
+    height: 4px;
+    background-color: #404bbf;
+    border-radius: 2px;
+}
+
+.header-soc {
+    font-style: normal;
+    display: flex;
+}
+
+.header-soc-list {
+    gap: 12px;
+    justify-content: flex-end;
+    flex-direction: column;
+}
+
+.header-soc-link {
+    color: #434455;
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.04em;
+    text-align: left;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header-soc-link:hover,
+.header-soc-link:focus {
+    color: #404BBF;
+}
+
+.menu-open-btn {
+    display: none;
+}
 
 .opening {
-    background-image: linear-gradient(
-        rgba(46, 47, 66, 0.7), 
-        rgba(46, 47, 66, 0.7)
-        ), 
-        url(../images/people-office-tab.jpg);
+background-image: linear-gradient(
+    rgba(46, 47, 66, 0.7), 
+    rgba(46, 47, 66, 0.7)
+    ), 
+    url(../images/people-office-tab.jpg);
 }
 
 @media (min-device-pixel-ratio: 2),
 (min-resolution: 192dpi),
 (min-resolution: 2dppx) {
-    .opening {
-        background-image: linear-gradient(
-        rgba(46, 47, 66, 0.7), 
-        rgba(46, 47, 66, 0.7)
-        ), 
-        url(../images/people-office-tab-2x.jpg);
+.opening {
+    background-image: linear-gradient(
+    rgba(46, 47, 66, 0.7), 
+    rgba(46, 47, 66, 0.7)
+    ), 
+    url(../images/people-office-tab-2x.jpg);
     }
 }
 
