--- a/css/styles.css
+++ b/css/styles.css
@@ -410,6 +410,7 @@ white-space: nowrap;
 
 .team-list { 
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
     gap: 72px;
 }
@@ -577,17 +578,21 @@ letter-spacing: 0.02em;
 
 .footer {
 background-color: #2E2F42;
-padding-top: 100px;
-padding-bottom: 100px;
+/* padding-top: 100px;
+padding-bottom: 100px; */
+padding: 96px 0  ;
 }
 
 .footer-container {
     display: flex;
-    align-items: baseline;
+    flex-wrap: wrap;
+    /* align-items: baseline; */
 }
 
 .footer-logo-text {
-    margin-right: 120px;
+    /* margin-right: 120px; */
+    display: block;
+    
 }
 
 .footer-logo {
@@ -600,7 +605,10 @@ padding-bottom: 100px;
     letter-spacing: 0.03em;
     text-align: left;
     margin-bottom: 16px;
-    display: inline-block;
+    /* display: inline-block; */
+    display: flex;
+    justify-content: center;
+    
 }
 
 .footer-logo-navy {
@@ -614,6 +622,15 @@ padding-bottom: 100px;
     letter-spacing: 0.02em;
     text-align: left;
     max-width: 264px
+
+    display: flex;
+    margin-bottom: 72px;
+}
+
+.footer-soc-media {
+    /* margin-right: 80px; */
+    display: block;
+    margin: 0 auto;
 }
 
 .footer-text-title {
@@ -623,17 +640,14 @@ padding-bottom: 100px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     margin-bottom: 16px;
-}
 
-.footer-soc-media {
-    margin-right: 80px;
+    display: flex;
+    justify-content: center;
 }
 
 .footer-social-list {
     display: flex;
     gap: 16px;
-    
-    
 }
 
 .footer-social-item {
@@ -648,7 +662,6 @@ padding-bottom: 100px;
     align-items: center;
     justify-content: center;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    
 }
 
 .footer-social-link:hover, 
@@ -661,17 +674,21 @@ padding-bottom: 100px;
     fill: #F4F4FD;
 }
 
-.footer-subscribe {
-    
+.footer-subscribe { 
+    margin-top: 72px;   
 }
 
 .footer-form {
-    display:flex;
-    gap: 24px;
+    /* display:flex;
+    gap: 24px; */
+    
+
+    display: block;
 }
 
 .footer-input {
-    width: 264px;
+    /* width: 264px; */
+    width: 288px;
     height: 40px;
     background-color: transparent;
     border: 1px solid #ffffff;
@@ -682,6 +699,10 @@ padding-bottom: 100px;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
     color: #FFFFFF;
+
+    margin-bottom: 16px;
+    opacity: 0.3;
+    
 }
 
 .footer-input::placeholder {
@@ -702,7 +723,9 @@ padding-bottom: 100px;
     border: none;
     display: flex;
     justify-content: center;
-    align-items: center; 
+    align-items: center;
+
+    margin: 0 auto;
 }
 
 .footer-btn-icon {
@@ -728,8 +751,8 @@ padding-bottom: 100px;
 }
 
 .modal {
-    width: 408px;
-    min-height: 584px;
+    width: 288px;
+    min-height: 623px;
     border-radius: 4px;
     background: #FCFCFC;
     position: absolute;
@@ -923,6 +946,7 @@ position: relative;
 .features-item-icon-back {
     display: none;
 }
+
 }
 
 @media screen and (min-width: 768px) {
@@ -934,6 +958,10 @@ position: relative;
 .header {
     padding-top: 16px;
     padding-bottom: 16px;
+}
+
+.header-logo {
+    margin-right: 120px
 }
 
 .header-menu {
@@ -1020,56 +1048,173 @@ background-image: linear-gradient(
     }
 }
 
-    .opening-title {
-        font-size: 56px;
-        line-height: 1.07;
-        margin-bottom: 36px;
-        max-width: 496px;
-        }
-
-    .team > .container {
-        max-width: 584px;
-    }
-
-    .features-list {
-        gap: 72px 24px;
-    }
-
-    .features-item {
-        width: calc((100% - 24px) / 2);
-    }
-
-    .features-item-icon-back {
-        display: none;
-    }
-
-
-
-    .team-list { 
-        gap: 64px 24px;
-    }
-
-    .team-item {
-        width: calc((100% - 24px) / 2);
-    }
-
-
-    .portfolio-item {
-        width: calc((100% - 24px) / 2);
-    }
-
-    .portfolio-list {
-        gap: 72px 24px;
-    }
+.opening-title {
+    font-size: 56px;
+    line-height: 1.07;
+    margin-bottom: 36px;
+    max-width: 496px;
 }
+
+.team > .container {
+    max-width: 584px;
+}
+
+.features-list {
+    gap: 72px 24px;
+}
+
+.features-item {
+    width: calc((100% - 24px) / 2);
+}
+
+.features-item-icon-back {
+    display: none;
+}
+
+
+
+.team-list { 
+    gap: 64px 24px;
+}
+
+.team-item {
+    width: calc((100% - 24px) / 2);
+ }
+
+
+.portfolio-item {
+    width: calc((100% - 24px) / 2);
+}
+
+.portfolio-list {
+    gap: 72px 24px;
+}
+
+
+
+.footer {
+    padding: 96px 148px 96px 92px;
+}
+
+.footer-logo-text {
+    margin-right: 24px;
+}
+
+.footer-logo {
+    display: inline-block;
+}
+
+.footer-text {
+    max-width: 264px
+}
+
+.footer-soc-media {
+    display: block;
+}
+
+.footer-text-title {
+    display: flex;
+    justify-content: start;
+}
+
+.footer-subscribe {
+    margin-top: 0px;
+}
+
+.footer-form {
+    display:flex;
+    gap: 24px;
+}
+
+.footer-input {
+    width: 264px;
+}
+
+.modal {
+    width: 408px;
+    min-height: 584px;
+}
+
+}
+
+
+
 
 @media screen and (min-width: 1440px) {
 
-    .container {
-        max-width: 1440px;
-        padding-left: 156px; 
-        padding-right: 156px;
-    }
+.container {
+     max-width: 1440px;
+    padding-left: 156px; 
+    padding-right: 156px;
+}
+
+.header {
+    padding-top: 24px;
+    padding-bottom: 24px;
+}
+
+.header-logo {
+    margin-right: 76px
+}
+
+.header-menu {
+    gap: 40px;
+}
+
+.header-menu-link {
+    color: #2E2F42;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    text-align: left;
+    position: relative;
+    padding-top: 24px;
+    padding-bottom: 24px;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header-menu-link:hover,
+.header-menu-link:focus {
+    color: #404BBF;
+}
+
+.header-menu-link:hover::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    width: 100%;
+    height: 4px;
+    background-color: #404bbf;
+    border-radius: 2px;
+}
+
+.header-soc {
+    font-style: normal;
+    margin-left: auto;
+}
+
+.header-soc-list {
+    display: flex;
+    flex-direction: row;
+    gap: 40px;
+}
+
+.header-soc-link {
+    color: #434455;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    text-align: left;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.header-soc-link:hover,
+.header-soc-link:focus {
+    color: #404BBF;
+}
+
 
     .opening {
         background-image: linear-gradient(
@@ -1166,4 +1311,44 @@ background-image: linear-gradient(
     .portfolio-list {
         gap: 48px 24px;
     }
+
+    .footer {
+        padding: 100px 0 100px 0;
+    }
+
+    .footer-container {
+        display: flex;
+        align-items: baseline;
+    }
+
+    .footer-logo-text {
+        margin-right: 120px;;
+    }
+
+    .footer-text {
+        display: flex;
+        margin-bottom: 0px;
+    }
+
+    .footer-soc-media {
+        margin: 0 80px 0 0;
+    }
+
+    .footer-form {
+        display:flex;
+        gap: 24px;
+    }
+
+    .footer-input {
+        width: 264px;
+        opacity: 1;
+    }
+
+    .modal {
+        width: 408px;
+        min-height: 584px;
+        }
+
+
 }
+
