--- a/css/styles.css
+++ b/css/styles.css
@@ -182,6 +182,8 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     opacity: 0;
     visibility: hidden;
     pointer-events: auto;
+    display: flex;
+    flex-direction: column;
 }
 
 .mob-close-btn-menu {
@@ -205,8 +207,7 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .mob-menu-list {
-    
-
+margin-bottom: auto;
 }
 .mob-menu-item:not(:last-child) {
  margin-bottom: 40px;   
@@ -215,7 +216,7 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 .mob-info {
 display: flex;
 flex-direction: column;
-gap: 168px;
+
 margin-bottom: 48px;
 }
 
@@ -236,7 +237,7 @@ color: #404bbf;
 .mob-soc {
 }
 .mob-soc-list {
-    
+   margin-bottom: 48px; 
 }
 .mob-soc-item:not(:last-child) {
     margin-bottom: 24px;
@@ -578,21 +579,17 @@ letter-spacing: 0.02em;
 
 .footer {
 background-color: #2E2F42;
-/* padding-top: 100px;
-padding-bottom: 100px; */
 padding: 96px 0  ;
 }
 
 .footer-container {
     display: flex;
     flex-wrap: wrap;
-    /* align-items: baseline; */
 }
 
 .footer-logo-text {
-    /* margin-right: 120px; */
     display: block;
-    
+    margin-bottom: 72px;
 }
 
 .footer-logo {
@@ -605,7 +602,6 @@ padding: 96px 0  ;
     letter-spacing: 0.03em;
     text-align: left;
     margin-bottom: 16px;
-    /* display: inline-block; */
     display: flex;
     justify-content: center;
     
@@ -622,13 +618,10 @@ padding: 96px 0  ;
     letter-spacing: 0.02em;
     text-align: left;
     max-width: 264px
-
     display: flex;
-    margin-bottom: 72px;
 }
 
 .footer-soc-media {
-    /* margin-right: 80px; */
     display: block;
     margin: 0 auto;
 }
@@ -1143,9 +1136,7 @@ background-image: linear-gradient(
 @media screen and (min-width: 1440px) {
 
 .container {
-     max-width: 1440px;
-    padding-left: 156px; 
-    padding-right: 156px;
+     max-width: 1158px;
 }
 
 .header {
@@ -1222,6 +1213,7 @@ background-image: linear-gradient(
             rgba(46, 47, 66, 0.7)
             ), 
             url(../images/people-office.jpg);
+        padding: 188px 0;
     }
 
     @media (min-device-pixel-ratio: 2),
@@ -1322,7 +1314,8 @@ background-image: linear-gradient(
     }
 
     .footer-logo-text {
-        margin-right: 120px;;
+        margin-right: 120px;
+        margin-bottom: 0;
     }
 
     .footer-text {
